
Added / Fixed / changed for 2.1.0
-----------------------
# This release focuses on new calendar & forms modules, e-Commerce as OOTB experience, integration of jQuery/Twitter Bootstrap
  - adds optional nested comments, and optional per-item comment disabling
  - adds optional comments to filedownload module
  - adds pagination option of 'More', useful for sidebar views
  - removes extra themes to reduce size of package, available as separate addon download

Added / Fixed / changed for 2.0.9
-----------------------
# This release focuses on greater HTML5 & PHP v5.4 compliance, & module upgrades
  - upgrades old school simple poll and navigation modules into 2.0 style controllers
    -- page type indicators now displayed in Manage Pages view
    -- new universal navigation view to emulate most old navigation views through user settings
    -- initial implementation of optional menu item icons
  - adds help links to most admin displays
  - adds next/prev item in blog and news single item view
  - adds optional 'date badge' to news, blog, & filedownload views
  - calendar is more forgiving of timezone changes (events won't disappear)
    -- adds selectable weekly view to calendar
    -- updates ical feeds and send reminders cron task to use sef urls
  - adds new 2-column style display option in forms module
  - updates rss feeds to use sef urls, adds individual feed 'advertise' option
  - more efficient searches...several anomalies fixed and search activity reports available
  - importing EQL database backup files now more descriptive if errors are encountered (detailed solution provided)
  - adds some new upgrade scripts to attempt to clean up the system from previous updates
    -- deletes moved files where old file in old location may still linger
    -- attempts to fix some database issues such as mixed case naming or controller name quirks
  - new system fallback theme so pages will display even if the entire themes folder is missing