@@ -28,52 +28,52 @@ class expVersion {
     /**
      * Return a string of the current version number.
      *
-     * @param bool $full Whether or not to return a full version number.  If passed as true,
-     *	a string in the form of '2.0.3-beta5' will be returned.  Otherwise, '2.0' would be returned.
+     * @param bool $full  Whether or not to return a full version number.  If passed as true,
+     *                    a string in the form of '2.0.3-beta5' will be returned.  Otherwise, '2.0' would be returned.
      * @param bool $build Whether or not to return the build date in the string.
-     * @param bool $type Whether to include the type and interation of a full version number
+     * @param bool $type  Whether to include the type and interation of a full version number
      *
      * @return string
      *
      * @node Subsystems:expVersion
      */
-	public static function getVersion($full = false, $build = false, $type = true) {
-		if (!defined('EXPONENT_VERSION_MAJOR')) include_once(BASE."exponent_version.php");
-		$vers = EXPONENT_VERSION_MAJOR.".".EXPONENT_VERSION_MINOR;  // can be used for numerical comparison
-		if ($full) {
-			$vers .= ".".EXPONENT_VERSION_REVISION;
-			if ($type && EXPONENT_VERSION_TYPE != '') $vers .= "-".EXPONENT_VERSION_TYPE.EXPONENT_VERSION_ITERATION;
-		}
-		if ($build) {
-			$vers .= " (Build Date: ".strftime("%D",EXPONENT_VERSION_BUILDDATE).")";
-		}
-		return $vers;
-	}
+    public static function getVersion($full = false, $build = false, $type = true) {
+        if (!defined('EXPONENT_VERSION_MAJOR')) include_once(BASE . "exponent_version.php");
+        $vers = EXPONENT_VERSION_MAJOR . "." . EXPONENT_VERSION_MINOR; // can be used for numerical comparison
+        if ($full) {
+            $vers .= "." . EXPONENT_VERSION_REVISION;
+            if ($type && EXPONENT_VERSION_TYPE != '') $vers .= "-" . EXPONENT_VERSION_TYPE . EXPONENT_VERSION_ITERATION;
+        }
+        if ($build) {
+            $vers .= " (Build Date: " . strftime("%D", EXPONENT_VERSION_BUILDDATE) . ")";
+        }
+        return $vers;
+    }
 
     /**
      * Return a string of the current version number in the database.
      *
-     * @param bool $full Whether or not to return a full version number.  If passed as true,
-     *	a string in the form of '2.0.3-beta5' will be returned.  Otherwise, '2.0' would be returned.
+     * @param bool $full  Whether or not to return a full version number.  If passed as true,
+     *                    a string in the form of '2.0.3-beta5' will be returned.  Otherwise, '2.0' would be returned.
      * @param bool $build Whether or not to return the build date in the string.
-     * @param bool $type Whether to include the type and interation of a full version number
+     * @param bool $type  Whether to include the type and interation of a full version number
      *
      * @return string
      *
      * @node Subsystems:expVersion
      */
-	public static function getDBVersion($full = false, $build = false, $type = true) {
+    public static function getDBVersion($full = false, $build = false, $type = true) {
         $dbver = self::dbVersion();
-		$vers = $dbver->major.".".$dbver->minor;  // can be used for numerical comparison
-		if ($full) {
-			$vers .= ".".$dbver->revision;
-			if ($type && $dbver->type != '') $vers .= "-".$dbver->type.$dbver->iteration;
-		}
-		if ($build) {
-			$vers .= " (Build Date: ".strftime("%D",$dbver->builddate).")";
-		}
-		return $vers;
-	}
+        $vers = $dbver->major . "." . $dbver->minor; // can be used for numerical comparison
+        if ($full) {
+            $vers .= "." . $dbver->revision;
+            if ($type && $dbver->type != '') $vers .= "-" . $dbver->type . $dbver->iteration;
+        }
+        if ($build) {
+            $vers .= " (Build Date: " . strftime("%D", $dbver->builddate) . ")";
+        }
+        return $vers;
+    }
 
     /**
      * Return an object of the current version number of the software.
@@ -82,7 +82,7 @@ class expVersion {
      *
      * @node Subsystems:expVersion
      */
-	public static function swVersion() {
+    public static function swVersion() {
         $swversion = new stdClass();
         $swversion->major = EXPONENT_VERSION_MAJOR;
         $swversion->minor = EXPONENT_VERSION_MINOR;
@@ -91,7 +91,7 @@ class expVersion {
         $swversion->iteration = EXPONENT_VERSION_ITERATION;
         $swversion->builddate = EXPONENT_VERSION_BUILDDATE;
         return $swversion;
-	}
+    }
 
     /**
      * Return an object of the current version number stored in the database.
@@ -100,10 +100,10 @@ class expVersion {
      *
      * @node Subsystems:expVersion
      */
-	public static function dbVersion() {
+    public static function dbVersion() {
         global $db;
 
-        $dbversion = $db->selectObject('version',1);
+        $dbversion = $db->selectObject('version', 1);
         if (empty($dbversion)) {
             $dbversion->major = 0;
             $dbversion->minor = 0;
@@ -112,48 +112,31 @@ class expVersion {
             $dbversion->iteration = '';
         }
         return $dbversion;
-	}
+    }
 
-	/**
-	 * Routine to check for installation or upgrade
-	 */
-	public static function checkVersion() {
-		global $db, $user;
+    /**
+     * Routine to check for installation or upgrade
+     */
+    public static function checkVersion() {
+        global $db, $user;
 
-//        $swversion = new stdClass();
-//        $swversion->major = EXPONENT_VERSION_MAJOR;
-//        $swversion->minor = EXPONENT_VERSION_MINOR;
-//        $swversion->revision = EXPONENT_VERSION_REVISION;
-//        $swversion->type = EXPONENT_VERSION_TYPE;
-//        $swversion->iteration = EXPONENT_VERSION_ITERATION;
-//        $swversion->builddate = EXPONENT_VERSION_BUILDDATE;
         $swversion = self::swVersion();
 
-		// check database version against installed software version
+        // check database version against installed software version
         if ($db->havedb) {
             if ($user->isSuperAdmin()) {
-//                $dbversion = $db->selectObject('version',1);
-//                if (empty($dbversion)) {
-//                    $dbversion->major = 0;
-//                    $dbversion->minor = 0;
-//                    $dbversion->revision = 0;
-//                    $dbversion->type = '';
-//                    $dbversion->iteration = '';
-//                }
                 $dbversion = self::dbVersion();
                 // check if software version is newer than database version
-                if (self::compareVersion($dbversion,$swversion)) {
-                    $oldvers = $dbversion->major.'.'.$dbversion->minor.'.'.$dbversion->revision.($dbversion->type?$dbversion->type:'').($dbversion->iteration?$dbversion->iteration:'');
-                    $newvers = $swversion->major.'.'.$swversion->minor.'.'.$swversion->revision.($swversion->type?$swversion->type:'').($swversion->iteration?$swversion->iteration:'');
-                    flash('message',gt('The database requires upgrading from').' v'.$oldvers.' '.gt('to').' v'.$newvers.
-                        '<br><a href="'.makelink(array("controller"=>"administration","action"=>"install_exponent")).'">'.gt('Click here to Upgrade your website').'</a>');
+                if (self::compareVersion($dbversion, $swversion)) {
+                    flash('message', gt('The database requires upgrading from') . ' v' . self::getDBVersion(true) . ' ' . gt('to') . ' v' . self::getVersion(true) .
+                        '<br><a href="' . makelink(array("controller" => "administration", "action" => "install_exponent")) . '">' . gt('Click here to Upgrade your website') . '</a>');
                 }
             }
         } else {
             // database is unavailable, so show us as being offline
             $template = new standalonetemplate('_maintenance');
-            $template->assign("db_down",true);
-           	$template->output();
+            $template->assign("db_down", true);
+            $template->output();
             exit();
         }
 
@@ -161,22 +144,22 @@ class expVersion {
         if ($user->isSuperAdmin()) {
             if (!expSession::is_set('update-check')) {
                 //FIXME we need a good installation/server to place this on
-                $jsondata = json_decode(expCore::loadData('http://www.exponentcms.org/'.'getswversion.php'));
+                $jsondata = json_decode(expCore::loadData('http://www.exponentcms.org/' . 'getswversion.php'));
                 if (!empty($jsondata->data)) {
                     $onlineVer = $jsondata->data;
                     if (!empty($onlineVer)) {
-                        expSession::set('update-check','1');
-                        if (self::compareVersion($swversion,$onlineVer)) {
-                            $note = ($onlineVer->type == 'patch' ? gt('A patch for the latest') : gt('A newer')).' '.gt('version of Exponent is available').':';
-                            $newvers = $onlineVer->major.'.'.$onlineVer->minor.'.'.$onlineVer->revision.($onlineVer->type?$onlineVer->type:'').($onlineVer->iteration?$onlineVer->iteration:'');
-                            flash('message',$note.' v'.$newvers.' '.gt('was released').' '.expDateTime::format_date($onlineVer->builddate).
-                                '<br><a href="https://github.com/exponentcms/exponent-cms/downloads" target="_blank">'.gt('Click here to see available Downloads').'</a>');
+                        expSession::set('update-check', '1');
+                        if (self::compareVersion($swversion, $onlineVer)) {
+                            $note = ($onlineVer->type == 'patch' ? gt('A patch for the latest') : gt('A newer')) . ' ' . gt('version of Exponent is available') . ':';
+                            $newvers = $onlineVer->major . '.' . $onlineVer->minor . '.' . $onlineVer->revision . ($onlineVer->type ? $onlineVer->type : '') . ($onlineVer->iteration ? $onlineVer->iteration : '');
+                            flash('message', $note . ' v' . $newvers . ' ' . gt('was released') . ' ' . expDateTime::format_date($onlineVer->builddate) .
+                                '<br><a href="https://github.com/exponentcms/exponent-cms/downloads" target="_blank">' . gt('Click here to see available Downloads') . '</a>');
                         }
                     }
                 }
             }
         }
-	}
+    }
 
     /**
      * Routine to compare passed versions
@@ -206,39 +189,39 @@ class expVersion {
         return false;
     }
 
-	/**
-	 * Routine to convert version iteration type to a rank
-	 * 
-	 * @param string $type
+    /**
+     * Routine to convert version iteration type to a rank
      *
-	 * @return int
-	 */
-	private static function iterateType($type) {
-		switch ($type) {
-			case 'alpha':
-				$typenum = 1;
-				break;
-			case 'beta':
-				$typenum = 2;
-				break;
-			case 'release-candidate':
-				$typenum = 3;
-				break;
-			case 'develop': // code from the github develop branch
-				$typenum = 5;
-				break;
-			case '':        // stable release
-				$typenum = 10;
-				break;
-            case 'patch':   // a patch trumps the stable version of the same version number
+     * @param string $type
+     *
+     * @return int
+     */
+    private static function iterateType($type) {
+        switch ($type) {
+            case 'alpha':
+                $typenum = 1;
+                break;
+            case 'beta':
+                $typenum = 2;
+                break;
+            case 'release-candidate':
+                $typenum = 3;
+                break;
+            case 'develop': // code from the github develop branch
+                $typenum = 5;
+                break;
+            case '': // stable release
+                $typenum = 10;
+                break;
+            case 'patch': // a patch trumps the stable version of the same version number
                 $typenum = 20;
                 break;
-			default:
-				$typenum = 0;
-				break;
-		}
-		return $typenum;
-	}
+            default:
+                $typenum = 0;
+                break;
+        }
+        return $typenum;
+    }
 
 }
 
