@@ -10,7 +10,8 @@ Added / Fixed / changed for 2.1.0
   - adds optional nested comments, and optional per-item comment disabling
   - adds optional comments to filedownload module
   - adds pagination option of 'More', useful for sidebar views
-  - removes extra themes to reduce size of package, available as separate addon download
+  - removes extra themes to reduce size of package, available as separate addon downloads
+  - adds option to display version changes during upgrade process
 
 Added / Fixed / changed for 2.0.9
 -----------------------
